* Changelog
** [0.2.2] - [2021-03-10 Wed] 
*** Fixed
    - Fixed an issue that caused some text tabs to fail when loaded from a file, but not copy-pasted
** [0.2.1] - [2021-03-08]
*** Added
    - Started working on drum tab support
    - Added warning system (which doesn't halt parsing)
*** Changed
    - Changed theme from Swing default to system theme
** [0.2.0] - [2021-02-28] (Midterm Submission)
*** Added
    - Added more tests for both the frontend and backend
    - Added a model
    - When selecting a file, the appropriate file extension will be chosen for you
    - Added the ability to convert and save with one button press
    - The SingleEntryView can highlight the approximate location of errors
*** Changed
    - Changed parsing method to a parse tree using ANTLR
    - Errors are now reported via a dialog box.
** [0.1.0] - [2021-02-17] (First Prototype)
*** Added
    - Set up Gradle building
    - Created README and instruction manual
    - You can drag and drop text tab files into the input box
    - The outputted MusicXML now fully conforms to the standard.
    - Added input validation
    - Created tests for backend
*** Changed
    - Tweaked requirements from PeerScholar feedback
** [0.1.0-alpha.4] - [2021-02-08] (Week 4)
*** Added
    - Added use cases to requirements document
    - Text boxes in both Views now give a prompt the user telling them to enter text or load from a file.
    - Created base API for XML parsing and connected it to frontend.
    - Created unit tests for frontend
*** Changed
    - Updated requirements
    - Text boxes in both Views now use a monospace font.
    - Main.java can now be used to start the program.
** [0.1.0-alpha.3] - [2021-02-01] (Week 3)
*** Added
    - The parser can now parse tokens and convert them to data.
    - Both Views allow the user to select the tab's instrument.
    - Implemented the "Load from File" and "Save to File" functionality