@@ -18,6 +18,7 @@ public class Main {
 	 * Executes the program using the Single Entry View.
 	 */
 	public static void main(String[] args) {
-		View.createView(View.ViewType.SINGLE_ENTRY);
+		View.enableSystemLookAndFeel();
+		View.createView(View.ViewType.TABBED);
 	}
 }
