@@ -21,8 +21,6 @@ import javax.swing.JFrame;
 import javax.swing.JOptionPane;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
-import javax.swing.UIManager;
-import javax.swing.UnsupportedLookAndFeelException;
 import javax.swing.border.LineBorder;
 import javax.swing.filechooser.FileNameExtensionFilter;
 import javax.swing.text.BadLocationException;
@@ -64,19 +62,19 @@ final class SingleEntryView implements View {
 				view.saveFileButton.setText("     Save to File     ");
 			}
 		};
-
+		
 		/**
 		 * Enables this state in the given view.
 		 */
 		public abstract void enable(SingleEntryView v);
 	}
-
-	//	private static final JPanel fillerPanel() {
-	//		final JPanel panel = new JPanel();
-	//		panel.setOpaque(false);
-	//		return panel;
-	//	}
-
+	
+	// private static final JPanel fillerPanel() {
+	// final JPanel panel = new JPanel();
+	// panel.setOpaque(false);
+	// return panel;
+	// }
+	
 	/**
 	 * Creates a {@code GridBagConstraints} object.
 	 *
@@ -88,42 +86,45 @@ final class SingleEntryView implements View {
 		gbc.gridy = y;
 		return gbc;
 	}
-
+	
 	/**
 	 * Creates a {@code GridBagConstraints} object.
 	 *
 	 * @since 2021-01-18
 	 */
-	private static GridBagConstraints gridBag(int x, int y, int width, int height) {
+	private static GridBagConstraints gridBag(int x, int y, int width,
+			int height) {
 		final GridBagConstraints gbc = gridBag(x, y);
 		gbc.gridwidth = width;
 		gbc.gridheight = height;
 		return gbc;
 	}
-
+	
 	/**
 	 * Creates a {@code GridBagConstraints} object.
 	 *
 	 * @since 2021-02-25
 	 */
-	private static GridBagConstraints gridBag(int x, int y, int width, int height, Insets insets) {
+	private static GridBagConstraints gridBag(int x, int y, int width,
+			int height, Insets insets) {
 		final GridBagConstraints gbc = gridBag(x, y, width, height);
 		gbc.insets = insets;
 		return gbc;
 	}
-
+	
 	/**
 	 * Creates and opens a View.
 	 *
 	 * @since 2021-01-18
 	 */
 	public static void main(String[] args) {
+		View.enableSystemLookAndFeel();
 		View.createView(View.ViewType.SINGLE_ENTRY);
 	}
-
+	
 	/** The frame that the GUI is displayed on. */
 	private final JFrame frame;
-
+	
 	/** The presenter that handles the view's input */
 	private final Presenter presenter;
 	/** The text box that handles both input and output. */
@@ -134,18 +135,18 @@ final class SingleEntryView implements View {
 	private final JButton convertButton;
 	/** The undo button for conversion. */
 	private final JButton revertButton;
-
+	
 	/** The button that saves output text to files. */
 	private final JButton saveFileButton;
 	/** What kind of text is stored in the text box */
 	private State textBoxState;
-
+	
 	/**
-	 * The input text that was inputted before a conversion. This variable is used
-	 * for the "Undo Conversion" button.
+	 * The input text that was inputted before a conversion. This variable is
+	 * used for the "Undo Conversion" button.
 	 */
 	private String previousInputText;
-
+	
 	/**
 	 * Creates the {@code SingleEntryView}.
 	 * 
@@ -155,70 +156,55 @@ final class SingleEntryView implements View {
 		this.frame = new JFrame("Tab2XML");
 		this.frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
 		this.presenter = new Presenter(this);
-
-		final String nativeLF = UIManager.getSystemLookAndFeelClassName();
-
-		// Install the look and feel
-		try {
-			UIManager.setLookAndFeel(nativeLF);
-		} catch (final ClassNotFoundException e1) {
-			// TODO Auto-generated catch block
-			e1.printStackTrace();
-		} catch (final InstantiationException e1) {
-			// TODO Auto-generated catch block
-			e1.printStackTrace();
-		} catch (final IllegalAccessException e1) {
-			// TODO Auto-generated catch block
-			e1.printStackTrace();
-		} catch (final UnsupportedLookAndFeelException e1) {
-			// TODO Auto-generated catch block
-			e1.printStackTrace();
-		}
-
+		
 		// load images
 		final Image bgImage;
 		try {
-			bgImage = ImageIO.read(Path.of("src/main/resources/appmap.png").toFile());
+			bgImage = ImageIO
+					.read(Path.of("src/main/resources/appmap.png").toFile());
 		} catch (final IOException e) {
 			throw new AssertionError("Image loading failed.", e);
 		}
-
+		
 		final JPanel backgroundPanel = new BackgroundImagePanel(bgImage);
 		backgroundPanel.setLayout(new GridLayout(1, 1));
 		this.frame.add(backgroundPanel);
-
+		
 		// create components
 		final JPanel mainPanel = new JPanel();
 		mainPanel.setLayout(new BorderLayout());
 		backgroundPanel.add(mainPanel);
-
+		
 		final JPanel buttonPanel = new JPanel();
 		buttonPanel.setLayout(new GridBagLayout());
 		mainPanel.add(buttonPanel, BorderLayout.SOUTH);
-
+		
 		// text box
-		this.textBox = new PromptingTextArea("Enter text tab or load it from a file...", 24, 80);
+		this.textBox = new PromptingTextArea(
+				"Enter text tab or load it from a file...", 24, 80);
 		this.textBox.setBorder(new LineBorder(Color.BLACK));
 		this.textBox.setFont(new Font(Font.MONOSPACED, Font.ITALIC, 12));
-		FileDragDropTarget.enableDragAndDrop(this.textBox);
-		this.textBox.addCaretListener(e -> this.textBox.getHighlighter().removeAllHighlights());
+		this.textBox.setDropTarget(new FileDragDropTarget(this.textBox));
+		this.textBox.addCaretListener(
+				e -> this.textBox.getHighlighter().removeAllHighlights());
 		mainPanel.add(new JScrollPane(this.textBox), BorderLayout.CENTER);
-
+		
 		// buttons
 		final Insets buttonInsets = new Insets(3, 8, 3, 8);
-
+		
 		final JButton loadFileButton = new JButton("Load From File");
 		loadFileButton.addActionListener(e -> this.presenter.loadFromFile());
 		buttonPanel.add(loadFileButton, gridBag(1, 0, 1, 1, buttonInsets));
-
+		
 		this.convertButton = new JButton("Convert");
 		this.convertButton.addActionListener(e -> this.presenter.convert());
 		buttonPanel.add(this.convertButton, gridBag(2, 0, 1, 1, buttonInsets));
-
+		
 		this.revertButton = new JButton("Undo Conversion");
-		this.revertButton.addActionListener(e -> this.setInputText(this.previousInputText));
+		this.revertButton
+				.addActionListener(e -> this.setInputText(this.previousInputText));
 		buttonPanel.add(this.revertButton, gridBag(3, 0, 1, 1, buttonInsets));
-
+		
 		this.saveFileButton = new JButton("Save to File");
 		this.saveFileButton.addActionListener(e -> {
 			if (this.textBoxState == State.INPUT) {
@@ -228,62 +214,66 @@ final class SingleEntryView implements View {
 			}
 		});
 		buttonPanel.add(this.saveFileButton, gridBag(4, 0, 1, 1, buttonInsets));
-
+		
 		// combo boxes
 		this.instrumentSelection = new JComboBox<>(Instrument.values());
-		buttonPanel.add(this.instrumentSelection, gridBag(0, 0, 1, 1, buttonInsets));
-
+		buttonPanel.add(this.instrumentSelection,
+				gridBag(0, 0, 1, 1, buttonInsets));
+		
 		// background
-		//		backgroundPanel.add(fillerPanel());
-		//		backgroundPanel.add(fillerPanel());
-		//		backgroundPanel.add(fillerPanel());
-		//		backgroundPanel.add(fillerPanel());
-		//		backgroundPanel.add(mainPanel);
-		//		backgroundPanel.add(fillerPanel());
-		//		backgroundPanel.add(fillerPanel());
-		//		backgroundPanel.add(fillerPanel());
-		//		backgroundPanel.add(fillerPanel());
-
+		// backgroundPanel.add(fillerPanel());
+		// backgroundPanel.add(fillerPanel());
+		// backgroundPanel.add(fillerPanel());
+		// backgroundPanel.add(fillerPanel());
+		// backgroundPanel.add(mainPanel);
+		// backgroundPanel.add(fillerPanel());
+		// backgroundPanel.add(fillerPanel());
+		// backgroundPanel.add(fillerPanel());
+		// backgroundPanel.add(fillerPanel());
+		
 		// set the frame to INPUT state.
 		State.INPUT.enable(this);
-
+		
 		// give everything the correct size
 		this.frame.pack();
-
+		
 		loadFileButton.requestFocusInWindow();
-
+		
 		// open the window
 		this.frame.setVisible(true);
 	}
-
+	
 	@Override
 	public String getInputText() {
-		return this.textBoxState == State.INPUT ? this.textBox.getText() : this.previousInputText;
+		return this.textBoxState == State.INPUT ? this.textBox.getText()
+				: this.previousInputText;
 	}
-
+	
 	@Override
 	public String getOutputText() {
 		return this.textBoxState == State.OUTPUT ? this.textBox.getText() : "";
 	}
-
+	
 	@Override
 	public Instrument getSelectedInstrument() {
 		// The only objects in this list are Instrument instances, so the cast
 		// should work.
 		return (Instrument) this.instrumentSelection.getSelectedItem();
 	}
-
+	
 	@Override
 	public void handleParseWarnings(Collection<ParsingWarning> warnings) {
 		// show dialog box
 		View.super.handleParseWarnings(warnings);
-
+		
 		// highlight position of each warning
-		final HighlightPainter painter = new DefaultHighlightPainter(Color.YELLOW);
-		warnings.stream().map(ParsingWarning::getLocation).flatMap(Optional::stream)
+		final HighlightPainter painter = new DefaultHighlightPainter(
+				Color.YELLOW);
+		warnings.stream().map(ParsingWarning::getLocation)
+				.flatMap(Optional::stream)
 				.forEach(token -> this.highlightToken(token, painter));
 	}
-
+	
 	/**
 	 * Highlights a token in the text box.
 	 *
@@ -293,34 +283,36 @@ final class SingleEntryView implements View {
 	 */
 	private void highlightToken(ErrorToken token, HighlightPainter painter) {
 		try {
-			this.textBox.getHighlighter().addHighlight(token.getStart() == 0?0: token.getStart() - 1, token.getStop(), painter);
+			this.textBox.getHighlighter().addHighlight(
+					token.getStart() == 0 ? 0 : token.getStart() - 1,
+					token.getStop(), painter);
 		} catch (final BadLocationException e) {
 			throw new AssertionError("Invalid token " + token, e);
 		}
 	}
-
+	
 	@Override
 	public void onParseError(UnparseableInputException error) {
 		// show dialog box
 		View.super.onParseError(error);
-
+		
 		// highlight position of each error
 		final HighlightPainter painter = new DefaultHighlightPainter(Color.RED);
 		error.getErrors().forEach(token -> this.highlightToken(token, painter));
 	}
-
+	
 	@Override
 	public Optional<Path> promptForFile(FileNameExtensionFilter preferredType) {
 		final JFileChooser fc = new JFileChooser();
 		fc.addChoosableFileFilter(preferredType);
 		fc.setFileFilter(preferredType);
-
+		
 		if (fc.showOpenDialog(this.frame) == JFileChooser.APPROVE_OPTION)
 			return Optional.of(fc.getSelectedFile().toPath());
 		else
 			return Optional.empty();
 	}
-
+	
 	@Override
 	public void setInputText(String text) {
 		this.previousInputText = null;
@@ -331,21 +323,23 @@ final class SingleEntryView implements View {
 		}
 		State.INPUT.enable(this);
 	}
-
+	
 	@Override
 	public void setOutputText(String text) {
-		this.previousInputText = this.textBox.isPrompting() ? "" : this.textBox.getText();
+		this.previousInputText = this.textBox.isPrompting() ? ""
+				: this.textBox.getText();
 		this.textBox.setText(text);
 		State.OUTPUT.enable(this);
 	}
-
+	
 	@Override
 	public void setSelectedInstrument(Instrument instrument) {
 		this.instrumentSelection.setSelectedItem(instrument);
 	}
-
+	
 	@Override
 	public void showErrorMessage(String title, String message) {
-		JOptionPane.showMessageDialog(this.frame, message, title, JOptionPane.ERROR_MESSAGE);
+		JOptionPane.showMessageDialog(this.frame, message, title,
+				JOptionPane.ERROR_MESSAGE);
 	}
 }
