@@ -5,6 +5,8 @@ import java.util.Collection;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import javax.swing.UIManager;
+import javax.swing.UnsupportedLookAndFeelException;
 import javax.swing.filechooser.FileNameExtensionFilter;
 
 import tab2xml.exceptions.ParsingWarning;
@@ -47,6 +49,18 @@ public interface View {
 			View create() {
 				return new DoubleEntryView();
 			}
+		},
+		/**
+		 * A GUI view that uses seperate text entries in separate tabs for input
+		 * and output.
+		 * 
+		 * @since 2021-03-10
+		 */
+		TABBED {
+			@Override
+			View create() {
+				return new TabbedView();
+			}
 		};
 		
 		/**
@@ -78,6 +92,21 @@ public interface View {
 	 */
 	static ViewBot createViewBot() {
 		return new ViewBot();
+	}
+	
+	/**
+	 * Enables the system look-and-feel in Swing, if it works.
+	 * 
+	 * @since 2021-03-10
+	 */
+	public static void enableSystemLookAndFeel() {
+		try {
+			UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
+		} catch (ClassNotFoundException | InstantiationException
+				| IllegalAccessException | UnsupportedLookAndFeelException e) {
+			System.err.println("Failed to enable system look-and-feel.");
+			e.printStackTrace();
+		}
 	}
 	
 	/**
